--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,14 +1,16 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title>login</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+
+
+
+
 
 <ion-content>
-<ion-content class="login">
-  <img class="logo"
-    src="https://th.bing.com/th/id/R.ac92a80933802e54b8b4a194c3e83dac?rik=rA59S0FWraM9Nw&pid=ImgRaw&r=0">
-
-
-
-
   <ion-tabs>
-
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="Inicio" [routerLink]="['/tabs/tab2']">
         <ion-icon name="person-circle"></ion-icon>
@@ -24,10 +26,8 @@
         <ion-icon name="information-circle"></ion-icon>
         <ion-label>Acerca de...</ion-label>
       </ion-tab-button>
-
-
     </ion-tab-bar>
   </ion-tabs>
 
-</ion-content>
 
+</ion-content>
